syntax = "proto3";

package user;

option go_package = "user-service/proto";

service UserService {
  rpc AddUser (AddUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  int32 age = 4;
}

message AddUserRequest {
  User user = 1;
}

message GetUserRequest {
  string email = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UserResponse {
  User user = 1;
  string message = 2;
}

